Started to add the login stuff for the webpage

--- a/src/main/webapp/newcss.css
+++ b/src/main/webapp/newcss.css
@@ -15,4 +15,11 @@ div {
     margin-right: 25%;
     float: right;
 }
+.button {
+    text-align: center;
+    color: black;
+    background-color: crimson;
+    
+}
+
 
