--- a/src/main/webapp/newcss.css
+++ b/src/main/webapp/newcss.css
@@ -9,9 +9,15 @@ and open the template in the editor.
 */
 html {
     background-image: url("http://data.whicdn.com/images/27696473/large.jpg");
+    background-repeat: no-repeat;
 }
 h1 {
     color: green;
+    
+}
+section {
+    margin: auto;
+ 
 }
 div {
     margin-left: 25%;
@@ -24,5 +30,7 @@ div {
     background-color: crimson;
     
 }
-
+p {
+    color: green;
+}
 
