--- a/src/main/webapp/newcss.css
+++ b/src/main/webapp/newcss.css
@@ -10,6 +10,7 @@ and open the template in the editor.
 html {
     background-image: url("http://data.whicdn.com/images/27696473/large.jpg");
     background-repeat: no-repeat;
+    background-size: 100%;
 }
 h1 {
     color: green;
@@ -33,4 +34,6 @@ div {
 p {
     color: green;
 }
-
+a {
+    color: green;
+}
