added the CSS stuff

--- a/src/main/webapp/newcss.css
+++ b/src/main/webapp/newcss.css
@@ -21,9 +21,8 @@ section {
  
 }
 div {
-    margin-left: 25%;
-    margin-right: 25%;
-    float: right;
+    text-align: center;
+    padding-top: 25px;
 }
 .button {
     text-align: center;
