--- a/src/main/webapp/newcss.css
+++ b/src/main/webapp/newcss.css
@@ -13,7 +13,7 @@ html {
     background-size: 100%;
 }
 h1 {
-    color: green;
+    color: crimson;
     
 }
 section {
@@ -31,8 +31,8 @@ div {
     
 }
 p {
-    color: green;
+    color: crimson;
 }
 a {
-    color: green;
+    color: crimson;
 }
