--- a/src/main/webapp/newcss.css
+++ b/src/main/webapp/newcss.css
@@ -21,8 +21,10 @@ section {
  
 }
 div {
+    background: rgba(0,0,0,0.5);
+    border-radius: 20px;
     text-align: center;
-    padding-top: 25px;
+    padding-top: 55px;
 }
 .button {
     text-align: center;
