--- a/src/main/webapp/newcss.css
+++ b/src/main/webapp/newcss.css
@@ -24,7 +24,13 @@ div {
     background: rgba(0,0,0,0.5);
     border-radius: 20px;
     text-align: center;
-    padding-top: 55px;
+    margin-top: 55px;
+    margin-left: 25%;
+    margin-right: 25%; 
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .button {
     text-align: center;
