--- a/src/main/webapp/newcss.css
+++ b/src/main/webapp/newcss.css
@@ -33,13 +33,9 @@ div {
     padding-right: 10px;
 }
 .button {
-    text-align: center;
-    color: black;
-    background-color: crimson;
-    
-}
-button.button {
-    margin-left: 10px;
+    padding: 2px 2px 2px 2px;
+    margin-right: 5px;
+    margin-left: 5px;
 }
 p {
     color: crimson;
