--- a/src/main/webapp/newcss.css
+++ b/src/main/webapp/newcss.css
@@ -36,6 +36,10 @@ div {
     padding: 2px 2px 2px 2px;
     margin-right: 5px;
     margin-left: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 p {
     color: crimson;
