--- a/src/main/webapp/newcss.css
+++ b/src/main/webapp/newcss.css
@@ -40,6 +40,7 @@ div {
     padding-right: 5px;
     padding-top: 5px;
     padding-bottom: 5px;
+    border-radius: 3px 3px 3px 3px;
 }
 p {
     color: crimson;
